--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#async-nats = { git = "https://github.com/nats-io/nats.rs" }
-async-nats = { path = "./nats.rs/async-nats" }
+async-nats = { git = "https://github.com/tinou98/nats.rs" }
 futures = "0.3"
 tokio = { version = "1.28", features = ["full"] }
 tracing = "0.1.37"
